content layout issue resolved

--- a/src-client/css/src/main.scss
+++ b/src-client/css/src/main.scss
@@ -1,5 +1,10 @@
 $primary-color: #79d3c6;
 
+html, body {
+    min-height:100%;
+    height:auto;
+}
+
 md-toolbar.global-header {
     position: fixed;
     background: #FFF;
@@ -110,14 +115,12 @@ form.contact-form {
 }
 
 md-toast {
-    position: fixed;
     padding: 0;
     text-align: center;
-    max-width: 400px;
-    margin: 0 auto;
 }
 
 footer {
+    clear: both;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 
     .strip {
